lab4/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c symbol_table.cpp
symbol_table.cpp: In function ‘void print_function(FILE*, symbol_table*)’:
symbol_table.cpp:231:27: warning: unused parameter ‘out’ [-Wunused-parameter]
 void print_function(FILE* out, symbol_table *func){
                           ^~~
symbol_table.cpp:231:46: warning: unused parameter ‘func’ [-Wunused-parameter]
 void print_function(FILE* out, symbol_table *func){
                                              ^~~~
symbol_table.cpp: In function ‘void p_call(astree*)’:
symbol_table.cpp:542:21: warning: unused parameter ‘s’ [-Wunused-parameter]
 void p_call(astree *s){
                     ^
symbol_table.cpp: In function ‘void gen_table(astree*)’:
symbol_table.cpp:550:26: error: cannot convert ‘const char*’ to ‘const string* {aka const std::__cxx11::basic_string<char>*}’ in initialization
       const string *emp= "global";
                          ^~~~~~~~
symbol_table.cpp:554:10: error: jump to case label [-fpermissive]
     case TOK_BLOCK:
          ^~~~~~~~~
symbol_table.cpp:550:21: note:   crosses initialization of ‘const string* emp’
       const string *emp= "global";
                     ^~~
symbol_table.cpp:557:10: error: jump to case label [-fpermissive]
     case TOK_STRUCT:
          ^~~~~~~~~~
symbol_table.cpp:550:21: note:   crosses initialization of ‘const string* emp’
       const string *emp= "global";
                     ^~~
symbol_table.cpp:559:10: error: jump to case label [-fpermissive]
     case TOK_FUNCTION:
          ^~~~~~~~~~~~
symbol_table.cpp:550:21: note:   crosses initialization of ‘const string* emp’
       const string *emp= "global";
                     ^~~
symbol_table.cpp:561:10: error: jump to case label [-fpermissive]
     case TOK_CALL:
          ^~~~~~~~
symbol_table.cpp:550:21: note:   crosses initialization of ‘const string* emp’
       const string *emp= "global";
                     ^~~
Makefile:55: recipe for target 'symbol_table.o' failed
make: *** [symbol_table.o] Error 1
